# ampform-dpd

./: .buildinfo  .cspell.json  .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  codecov.yml  environment.yml  genindex.html  index.html  jpsi2ksp.html  lc2pkpi.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.7.txt  py3.8.txt  py3.9.txt
.doctrees/: codeautolink-cache.json  index.doctree  jpsi2ksp.doctree  lc2pkpi.doctree
.doctrees/api/: ampform_dpd.angles.doctree  ampform_dpd.decay.doctree  ampform_dpd.doctree  ampform_dpd.dynamics.doctree  ampform_dpd.io.doctree  ampform_dpd.spin.doctree
.github/: release-drafter.yml
.github/workflows/: ci-docs.yml  ci-style.yml  ci-tests.yml  ci.yml  linkcheck.yml  pr-linting.yml  requirements-cron.yml  requirements-pr.yml  requirements.yml
_modules/: ampform_dpd.html  index.html
_modules/ampform_dpd/: angles.html  decay.html  dynamics.html  io.html  spin.html
_sources/: lc2pkpi.ipynb
_sources/api/: ampform_dpd.angles.rst  ampform_dpd.decay.rst  ampform_dpd.dynamics.rst  ampform_dpd.io.rst  ampform_dpd.rst  ampform_dpd.spin.rst
api/: ampform_dpd.angles.html  ampform_dpd.decay.html  ampform_dpd.dynamics.html  ampform_dpd.html  ampform_dpd.io.html  ampform_dpd.spin.html
docs/: .gitignore  Lc2ppiK.json  _relink_references.py  _unsrt_et_al.py  collect-wigners.ipynb  comparison.md  conf.py  d2kkk.ipynb  index.ipynb  index.md  install.md  jpsi2ksp.ipynb  jpsi2phipipi.ipynb  jpsi2pipipi.ipynb  lc2pkpi.ipynb  references.bib  references.md  serialization.ipynb  xib2pkk.ipynb
docs/comparison/: d2kkk.ipynb  jpsi2phipipi.ipynb  jpsi2pipipi.ipynb
src/ampform_dpd/: __init__.py  _attrs.py  _cache.py  angles.py  decay.py  dynamics.py  io.py  particle-definitions.yml  spin.py
src/ampform_dpd/adapter/: qrules.py
src/ampform_dpd/dynamics/: __init__.py  builder.py
src/ampform_dpd/io/: __init__.py  cached.py
src/ampform_dpd/io/serialization/: __init__.py  amplitude.py  decay.py  dynamics.py  format.py
tests/: conftest.py  test_angles.py  test_cached.py  test_decay.py  test_dpd_builder.py  test_io.py
tests/adapter/: test_qrules.py
tests/io_serialization/: conftest.py  test_amplitude.py  test_decay.py  test_format.py
