[metadata]
name = ampform-dpd
description = Symbolic expressions for Dalitz-Plot Decomposition
author = Mikhail Mikhasenko, Remco de Boer
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3 or later
project_urls =
    Tracker = https://github.com/ComPWA/ampform-dpd/issues
    Changelog = https://github.com/ComPWA/ampform-dpd/releases
    Documentation = https://compwa.github.io/ampform-dpd
    Source = https://github.com/ComPWA/ampform-dpd

[options]
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    ampform >=0.14.1  # Kibble and Kallen functions
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
    typing-extensions; python_version <"3.8.0"
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    ipywidgets
    importlib-metadata; python_version <"3.8.0"
    matplotlib
    myst-nb >=0.14  # nb_render_markdown_format for Markdown tables
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-design
    sphinx-togglebutton
    tensorwaves[jax]
    tqdm
jupyter =
    %(doc)s
    aquirdturtle-collapsible-headings
    jupyterlab >=3.0
    jupyterlab-code-formatter
    jupyterlab-myst
test =
    nbmake <=1.3.0  # https://github.com/ComPWA/ampform-dpd/actions/runs/3190469093/jobs/5205620578#step:3:69
    numpy
    pytest >=6.0  # pyproject.toml
    pytest-cov
    pytest-xdist
format =
    black
    isort
sty =
    %(format)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
ampform_dpd =
    py.typed
